# SafeTherapy

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: Report.md
docs/metrics/: bn_model_report.json  rf_evaluation_report.json
src/: main.py
src/bn/: learner.py  predictor.py
src/bn/models/: faers_frailty_bbn.pkl
src/kb/: fact_extractor.py  interface.py  utils.py
src/kb/prolog/: atom_mapping.json  facts.pl  reasoning.pl
src/ml/: predictor.py  train_model.py  utils.py
src/ml/models/: label_encoders.pkl  rf_risk_model.pkl
src/sss/: heuristic.py  search.py
tools/: generate_dataset_faers.py
